--- a/app/styles/markdown.scss
+++ b/app/styles/markdown.scss
@@ -48,7 +48,7 @@
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: #101828;
+  color: #fff;
   background-color: var(--color-canvas-default);
   font-size: 14px;
   font-weight: 400;
